# rest-api-rs

./: Cargo.toml
.github/workflows/: rust_build.yml  rust_test.yml
examples/: crud.rs
src/: controllers.rs  error.rs  main.rs  utils.rs
src/controllers/: auth.rs  info.rs  sns.rs  user.rs
src/models/: auth.rs
