[package]
name = "rest-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum-macros = "0.3.0"
axum = { version = "0.6.7", features = ["headers"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.3.0", features = ["cors"] }
jsonwebtoken = "8.0"
once_cell = "1.8"
aws-config = "0.54.1"
aws-sdk-dynamodb = "0.24.0"
serde_dynamo = { version = "4", features = ["aws-sdk-dynamodb+0_24"] }
tokio-stream = "0.1.12"
rand = "0.8.3"
aws-sdk-sns = "0.24.0"
[dependencies.structopt]
version = "0.3"
default-features = false

[dependencies.uuid]
version = "1.3.0"
features = ["v4"]

[dependencies.aws-smithy-http]
features = ["rt-tokio"]
version = "0.54.3"
